--- a/medcare/Dockerfile
+++ b/medcare/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:18-bullseye
 
 # Set the working directory in the container
-WORKDIR /medcare
+WORKDIR /app
 
 # Copy package.json and package-lock.json
 COPY package*.json ./
