--- a/medcare-server/Dockerfile
+++ b/medcare-server/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:18-bullseye
 
 # Create and set the working directory
-WORKDIR /medcare-server
+WORKDIR /app
 
 # Copy package.json and package-lock.json
 COPY package*.json ./
